--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-parallax-tilt": "^1.7.37",
     "react-scripts": "4.0.2",
     "react-tsparticles": "^2.0.6",
+    "serve": "^14.0.1",
     "tachyons": "^4.12.0",
     "tsparticles": "^2.0.6",
     "web-vitals": "^2.1.4"
